--- a/app/src/main/res/layout/dialog_carta.xml
+++ b/app/src/main/res/layout/dialog_carta.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/txDialogProduto"
+        android:id="@+id/txDialog1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
