--- a/app/src/main/res/layout/activity_carta_cliente.xml
+++ b/app/src/main/res/layout/activity_carta_cliente.xml
@@ -83,7 +83,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/txAlergenos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView" />
