--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -131,7 +131,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        app:layout_constraintBottom_toTopOf="@id/btnNuevoProducto"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6"
         app:layout_constraintVertical_bias="0.0">
 
