--- a/app/src/main/res/layout/item_linea_ticket_cliente.xml
+++ b/app/src/main/res/layout/item_linea_ticket_cliente.xml
@@ -5,56 +5,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:orientation="horizontal"
-        android:weightSum="1"
+    <TextView
+        android:id="@+id/tvCantidad"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.1"
+        android:text="Cant."
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:id="@+id/tvCantidad"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.2"
-            android:layout_height="match_parent"
-            android:text="Cant."
-            android:textSize="16sp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="56dp" />
 
-        <TextView
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:id="@+id/tvProducto"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.4"
-            android:layout_height="match_parent"
-            android:text="Producto"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tvProducto"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.7"
+        android:text="Producto"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guideline5" />
 
-        <TextView
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:id="@+id/tvPrecioUnitario"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.2"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="60dp"
-            android:text="Precio Unidad"
-            android:textSize="16sp" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="262dp" />
 
-        <TextView
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:id="@+id/tvPrecioTotal"
-            android:layout_width="wrap_content"
-            android:layout_weight="0.2"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="60dp"
-            android:text="Total"
-            android:textSize="16sp" />
+    <TextView
+        android:id="@+id/tvPrecioUnitario"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.1"
+        android:text="Precio Unidad"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guideline8" />
 
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="338dp" />
+
+    <TextView
+        android:id="@+id/tvPrecioTotal"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="0.1"
+        android:text="Total"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/guideline11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
